RESOLVED FIXED81460
REGRESSION(r110072): Improper repainting on table with overflow: hidden
https://bugs.webkit.org/show_bug.cgi?id=81460
Summary REGRESSION(r110072): Improper repainting on table with overflow: hidden
Julien Chaffraix
Reported 2012-03-17 17:35:30 PDT
How to reproduce: 1. go to http://docs.fuelphp.com/ 2. click on "TABLE OF CONTENTS" 3. hover over the links (copied from downstream bug: http://crbug.com/117356) The issue is that we are not repainting the link as we should (the CSS is updated if you query it). This is due to us not updating our cached repaint rectangle. Patch forthcoming.
Attachments
Proposed fix: call updateCachedSizeForOverflowClip. (6.83 KB, patch)
2012-03-17 17:55 PDT, Julien Chaffraix
no flags
Patch for landing (7.52 KB, patch)
2012-03-19 18:19 PDT, Julien Chaffraix
no flags
Julien Chaffraix
Comment 1 2012-03-17 17:55:45 PDT
Created attachment 132474 [details] Proposed fix: call updateCachedSizeForOverflowClip.
Simon Fraser (smfr)
Comment 2 2012-03-18 10:52:39 PDT
Did this regress at some point?
Julien Chaffraix
Comment 3 2012-03-18 10:57:36 PDT
(In reply to comment #2) > Did this regress at some point? Yes, this is a regression from bug 75568 (as we don't have a layer in this case, we need to make sure we properly cache our updated size which we did not do in this case).
WebKit Review Bot
Comment 4 2012-03-18 11:54:02 PDT
Comment on attachment 132474 [details] Proposed fix: call updateCachedSizeForOverflowClip. Attachment 132474 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11974982 New failing tests: fast/repaint/table-hover-on-link.html
Julien Chaffraix
Comment 5 2012-03-19 18:19:30 PDT
Created attachment 132738 [details] Patch for landing
Julien Chaffraix
Comment 6 2012-03-19 18:21:14 PDT
I tweaked the test a bit to avoid having platform-specific text dumps. Tested on Chromium-linux + SnowLeopard (both Chromium & Mac)
WebKit Review Bot
Comment 7 2012-03-19 22:38:02 PDT
Comment on attachment 132738 [details] Patch for landing Clearing flags on attachment: 132738 Committed r111360: <http://trac.webkit.org/changeset/111360>
WebKit Review Bot
Comment 8 2012-03-19 22:38:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.